Fix Firestore paths to match instructions exactly
- Update consumables registry path to feud4/consumables/master/{slug}
- Update consume_requests path to feud4/users/<uid>/consume_requests/<auto-id>
- Update active_buffs path to feud4/users/<uid>/active_buffs/<slug>
- Update effects_log path to feud4/users/<uid>/effects_log/<auto-id>
- Update Cloud Function trigger path
- Update Firestore rules to match new paths
- Update buff loading to use uid instead of characterId

--- a/Concepts & Documents/data manager after phase 3.6
+++ b/Concepts & Documents/data manager after phase 3.6
@@ -205,7 +205,410 @@ default {
         // Debug: Log all incoming messages
         debugLog(">>> Data Manager link_message: msg='" + msg + "' num=" + (string)num);
         
-        // write_character_to_lsd handler moved to Data Manager Legacy JSON Parser script
+        // Handle write_character_to_lsd message from Firestore Bridge
+        if (msg == "write_character_to_lsd") {
+            string charDocJson = (string)id;
+            if (charDocJson == "" || charDocJson == "JSON_INVALID") {
+                debugLog("ERROR: Invalid character document JSON");
+                return;
+            }
+            
+            string fieldsJson = llJsonGetValue(charDocJson, ["fields"]);
+            if (fieldsJson == JSON_INVALID || fieldsJson == "") {
+                debugLog("ERROR: Character document has no fields");
+                return;
+            }
+            
+            debugLog("Writing character data from Firestore to LSD...");
+            
+            // Extract and write stats (as CSV)
+            string statsField = llJsonGetValue(fieldsJson, ["stats"]);
+            if (statsField != JSON_INVALID && statsField != "") {
+                string statsMapValue = llJsonGetValue(statsField, ["mapValue", "fields"]);
+                if (statsMapValue != JSON_INVALID && statsMapValue != "") {
+                    list statsList = [];
+                    integer i;
+                    for (i = 0; i < 20; i++) {
+                        string statKey = (string)i;
+                        string statField = llJsonGetValue(statsMapValue, [statKey]);
+                        if (statField != JSON_INVALID && statField != "") {
+                            string intValue = llJsonGetValue(statField, ["integerValue"]);
+                            if (intValue != JSON_INVALID && intValue != "") {
+                                // Remove quotes if present
+                                if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                    intValue = llGetSubString(intValue, 1, -2);
+                                }
+                                statsList += [(integer)intValue];
+                            }
+                        }
+                    }
+                    if (llGetListLength(statsList) > 0) {
+                        string statsCSV = llDumpList2String(statsList, ",");
+                        llLinksetDataWrite("stats", statsCSV);
+                    }
+                }
+            }
+            
+            // Extract and write health (as current|base|max)
+            string healthField = llJsonGetValue(fieldsJson, ["health"]);
+            if (healthField != JSON_INVALID && healthField != "") {
+                string healthMapValue = llJsonGetValue(healthField, ["mapValue", "fields"]);
+                if (healthMapValue != JSON_INVALID && healthMapValue != "") {
+                    integer current = 0;
+                    integer base = 0;
+                    integer max = 0;
+                    
+                    string currentField = llJsonGetValue(healthMapValue, ["current"]);
+                    if (currentField != JSON_INVALID && currentField != "") {
+                        string intValue = llJsonGetValue(currentField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            current = (integer)intValue;
+                        }
+                    }
+                    
+                    string baseField = llJsonGetValue(healthMapValue, ["base"]);
+                    if (baseField != JSON_INVALID && baseField != "") {
+                        string intValue = llJsonGetValue(baseField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            base = (integer)intValue;
+                        }
+                    }
+                    
+                    string maxField = llJsonGetValue(healthMapValue, ["max"]);
+                    if (maxField != JSON_INVALID && maxField != "") {
+                        string intValue = llJsonGetValue(maxField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            max = (integer)intValue;
+                        }
+                    }
+                    
+                    string healthData = (string)current + "|" + (string)base + "|" + (string)max;
+                    llLinksetDataWrite("health", healthData);
+                }
+            }
+            
+            // Extract and write stamina (as current|base|max)
+            string staminaField = llJsonGetValue(fieldsJson, ["stamina"]);
+            if (staminaField != JSON_INVALID && staminaField != "") {
+                string staminaMapValue = llJsonGetValue(staminaField, ["mapValue", "fields"]);
+                if (staminaMapValue != JSON_INVALID && staminaMapValue != "") {
+                    integer current = 0;
+                    integer base = 0;
+                    integer max = 0;
+                    
+                    string currentField = llJsonGetValue(staminaMapValue, ["current"]);
+                    if (currentField != JSON_INVALID && currentField != "") {
+                        string intValue = llJsonGetValue(currentField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            current = (integer)intValue;
+                        }
+                    }
+                    
+                    string baseField = llJsonGetValue(staminaMapValue, ["base"]);
+                    if (baseField != JSON_INVALID && baseField != "") {
+                        string intValue = llJsonGetValue(baseField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            base = (integer)intValue;
+                        }
+                    }
+                    
+                    string maxField = llJsonGetValue(staminaMapValue, ["max"]);
+                    if (maxField != JSON_INVALID && maxField != "") {
+                        string intValue = llJsonGetValue(maxField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            max = (integer)intValue;
+                        }
+                    }
+                    
+                    string staminaData = (string)current + "|" + (string)base + "|" + (string)max;
+                    llLinksetDataWrite("stamina", staminaData);
+                }
+            }
+            
+            // Extract and write mana (as current|base|max)
+            string manaField = llJsonGetValue(fieldsJson, ["mana"]);
+            if (manaField != JSON_INVALID && manaField != "") {
+                string manaMapValue = llJsonGetValue(manaField, ["mapValue", "fields"]);
+                if (manaMapValue != JSON_INVALID && manaMapValue != "") {
+                    integer current = 0;
+                    integer base = 0;
+                    integer max = 0;
+                    
+                    string currentField = llJsonGetValue(manaMapValue, ["current"]);
+                    if (currentField != JSON_INVALID && currentField != "") {
+                        string intValue = llJsonGetValue(currentField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            current = (integer)intValue;
+                        }
+                    }
+                    
+                    string baseField = llJsonGetValue(manaMapValue, ["base"]);
+                    if (baseField != JSON_INVALID && baseField != "") {
+                        string intValue = llJsonGetValue(baseField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            base = (integer)intValue;
+                        }
+                    }
+                    
+                    string maxField = llJsonGetValue(manaMapValue, ["max"]);
+                    if (maxField != JSON_INVALID && maxField != "") {
+                        string intValue = llJsonGetValue(maxField, ["integerValue"]);
+                        if (intValue != JSON_INVALID && intValue != "") {
+                            if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                intValue = llGetSubString(intValue, 1, -2);
+                            }
+                            max = (integer)intValue;
+                        }
+                    }
+                    
+                    string manaData = (string)current + "|" + (string)base + "|" + (string)max;
+                    llLinksetDataWrite("mana", manaData);
+                }
+            }
+            
+            // Extract and write class_id
+            string classField = llJsonGetValue(fieldsJson, ["class_id"]);
+            if (classField != JSON_INVALID && classField != "") {
+                string classValue = llJsonGetValue(classField, ["stringValue"]);
+                if (classValue != JSON_INVALID && classValue != "") {
+                    if (llStringLength(classValue) >= 2 && llGetSubString(classValue, 0, 0) == "\"" && llGetSubString(classValue, -1, -1) == "\"") {
+                        classValue = llGetSubString(classValue, 1, -2);
+                    }
+                    llLinksetDataWrite("class", classValue);
+                }
+            }
+            
+            // Extract and write xp_total and xp_available (combine as "total|available")
+            string xpTotalField = llJsonGetValue(fieldsJson, ["xp_total"]);
+            string xpAvailableField = llJsonGetValue(fieldsJson, ["xp_available"]);
+            integer xpTotal = 0;
+            integer xpAvailable = 0;
+            
+            if (xpTotalField != JSON_INVALID && xpTotalField != "") {
+                string intValue = llJsonGetValue(xpTotalField, ["integerValue"]);
+                if (intValue != JSON_INVALID && intValue != "") {
+                    if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                        intValue = llGetSubString(intValue, 1, -2);
+                    }
+                    xpTotal = (integer)intValue;
+                }
+            }
+            
+            if (xpAvailableField != JSON_INVALID && xpAvailableField != "") {
+                string intValue = llJsonGetValue(xpAvailableField, ["integerValue"]);
+                if (intValue != JSON_INVALID && intValue != "") {
+                    if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                        intValue = llGetSubString(intValue, 1, -2);
+                    }
+                    xpAvailable = (integer)intValue;
+                }
+            }
+            
+            if (xpTotal != 0 || xpAvailable != 0) {
+                string xpData = (string)xpTotal + "|" + (string)xpAvailable;
+                llLinksetDataWrite("xp", xpData);
+            }
+            
+            // Extract and write species_id
+            string speciesField = llJsonGetValue(fieldsJson, ["species_id"]);
+            if (speciesField != JSON_INVALID && speciesField != "") {
+                string speciesValue = llJsonGetValue(speciesField, ["stringValue"]);
+                if (speciesValue != JSON_INVALID && speciesValue != "") {
+                    if (llStringLength(speciesValue) >= 2 && llGetSubString(speciesValue, 0, 0) == "\"" && llGetSubString(speciesValue, -1, -1) == "\"") {
+                        speciesValue = llGetSubString(speciesValue, 1, -2);
+                    }
+                    llLinksetDataWrite("species_id", speciesValue);
+                }
+            }
+            
+            // Extract and write species_factors (as individual LSD keys + JSON string for backward compatibility)
+            string speciesFactorsField = llJsonGetValue(fieldsJson, ["species_factors"]);
+            if (speciesFactorsField != JSON_INVALID && speciesFactorsField != "") {
+                string factorsMapValue = llJsonGetValue(speciesFactorsField, ["mapValue", "fields"]);
+                if (factorsMapValue != JSON_INVALID && factorsMapValue != "") {
+                    list factorNames = ["health_factor", "stamina_factor", "mana_factor"];
+                    integer i;
+                    integer len = llGetListLength(factorNames);
+                    
+                    // Build JSON for backward compatibility (temporary)
+                    list jsonParts = ["{"];
+                    
+                    for (i = 0; i < len; i++) {
+                        if (i > 0) jsonParts += ",";
+                        string factorName = llList2String(factorNames, i);
+                        string factorField = llJsonGetValue(factorsMapValue, [factorName]);
+                        if (factorField != JSON_INVALID && factorField != "") {
+                            string intValue = llJsonGetValue(factorField, ["integerValue"]);
+                            if (intValue != JSON_INVALID && intValue != "") {
+                                if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                                    intValue = llGetSubString(intValue, 1, -2);
+                                }
+                                // Write individual LSD key (new format)
+                                llLinksetDataWrite(factorName, intValue);
+                                debugLog("Wrote " + factorName + " = " + intValue + " (from write_character_to_lsd)");
+                                
+                                // Also build JSON for backward compatibility (temporary)
+                                jsonParts += ["\"", factorName, "\":", intValue];
+                            }
+                        }
+                    }
+                    jsonParts += "}";
+                    string factorsJson = llDumpList2String(jsonParts, "");
+                    // Keep JSON for backward compatibility (temporary - will be removed in Phase 5)
+                    llLinksetDataWrite("species_factors", factorsJson);
+                }
+            }
+            
+            // Extract and write has_mana (as "true"/"false")
+            string hasManaField = llJsonGetValue(fieldsJson, ["has_mana"]);
+            if (hasManaField != JSON_INVALID && hasManaField != "") {
+                string boolValue = llJsonGetValue(hasManaField, ["booleanValue"]);
+                if (boolValue != JSON_INVALID && boolValue != "") {
+                    // Remove quotes if present
+                    if (llStringLength(boolValue) >= 2 && llGetSubString(boolValue, 0, 0) == "\"" && llGetSubString(boolValue, -1, -1) == "\"") {
+                        boolValue = llGetSubString(boolValue, 1, -2);
+                    }
+                    llLinksetDataWrite("has_mana", boolValue);
+                }
+            }
+            
+            // Extract and write currency
+            string currencyField = llJsonGetValue(fieldsJson, ["currency"]);
+            if (currencyField != JSON_INVALID && currencyField != "") {
+                string intValue = llJsonGetValue(currencyField, ["integerValue"]);
+                if (intValue != JSON_INVALID && intValue != "") {
+                    if (llStringLength(intValue) >= 2 && llGetSubString(intValue, 0, 0) == "\"" && llGetSubString(intValue, -1, -1) == "\"") {
+                        intValue = llGetSubString(intValue, 1, -2);
+                    }
+                    llLinksetDataWrite("currency", intValue);
+                }
+            }
+            
+            // Extract and write mode
+            string modeField = llJsonGetValue(fieldsJson, ["mode"]);
+            if (modeField != JSON_INVALID && modeField != "") {
+                string modeValue = llJsonGetValue(modeField, ["stringValue"]);
+                if (modeValue != JSON_INVALID && modeValue != "") {
+                    if (llStringLength(modeValue) >= 2 && llGetSubString(modeValue, 0, 0) == "\"" && llGetSubString(modeValue, -1, -1) == "\"") {
+                        modeValue = llGetSubString(modeValue, 1, -2);
+                    }
+                    llLinksetDataWrite("mode", modeValue);
+                }
+            }
+            
+            // Action slots are now HUD-only and LSD-only (not synced from Firestore)
+            
+            // Extract and write inventory (as individual LSD keys + JSON string for backward compatibility)
+            string inventoryField = llJsonGetValue(fieldsJson, ["inventory"]);
+            if (inventoryField != JSON_INVALID && inventoryField != "") {
+                // Get characterId from LSD (stored by Firestore Bridge)
+                string characterId = llLinksetDataRead("characterId");
+                
+                // Convert Firestore mapValue to individual LSD keys
+                string inventoryMapValue = llJsonGetValue(inventoryField, ["mapValue", "fields"]);
+                if (inventoryMapValue != JSON_INVALID && inventoryMapValue != "") {
+                    // Build simple JSON map for backward compatibility (temporary)
+                    list inventoryItems = [];
+                    list itemNames = [];  // List of item names for inventory_list key
+                    list jsonParts = ["{"];
+                    integer i = 0;
+                    integer itemCount = 0;
+                    
+                    while (TRUE) {
+                        string itemKey = llJsonGetValue(inventoryMapValue, [i]);
+                        if (itemKey == JSON_INVALID || itemKey == "") jump done_inventory;
+                        
+                        string itemField = llJsonGetValue(inventoryMapValue, [itemKey]);
+                        if (itemField != JSON_INVALID && itemField != "") {
+                            string qtyValue = llJsonGetValue(itemField, ["integerValue"]);
+                            if (qtyValue != JSON_INVALID && qtyValue != "") {
+                                if (llStringLength(qtyValue) >= 2 && llGetSubString(qtyValue, 0, 0) == "\"" && llGetSubString(qtyValue, -1, -1) == "\"") {
+                                    qtyValue = llGetSubString(qtyValue, 1, -2);
+                                }
+                                
+                                // Write individual LSD key (new format)
+                                if (characterId != "" && characterId != "JSON_INVALID") {
+                                    string inventoryKey = characterId + "_inventory_" + itemKey;
+                                    llLinksetDataWrite(inventoryKey, qtyValue);
+                                    itemNames += [itemKey];  // Add to list for inventory_list
+                                    debugLog("Wrote " + inventoryKey + " = " + qtyValue + " (from write_character_to_lsd)");
+                                }
+                                
+                                // Also build JSON for backward compatibility (temporary)
+                                inventoryItems += [itemKey, qtyValue];
+                                if (itemCount > 0) jsonParts += ",";
+                                jsonParts += ["\"", itemKey, "\":", qtyValue];
+                                itemCount++;
+                            }
+                        }
+                        i++;
+                    }
+                    @done_inventory;
+                    
+                    // Write inventory list key for easy enumeration
+                    if (characterId != "" && characterId != "JSON_INVALID" && llGetListLength(itemNames) > 0) {
+                        string inventoryListKey = characterId + "_inventory_list";
+                        string inventoryList = llDumpList2String(itemNames, ",");
+                        llLinksetDataWrite(inventoryListKey, inventoryList);
+                        debugLog("Wrote " + inventoryListKey + " = " + inventoryList);
+                    }
+                    
+                    // Keep JSON for backward compatibility (temporary - will be removed in Phase 5)
+                    jsonParts += "}";
+                    string inventoryJson = llDumpList2String(jsonParts, "");
+                    llLinksetDataWrite("inventory", inventoryJson);
+                } else {
+                    // Empty inventory
+                    if (characterId != "" && characterId != "JSON_INVALID") {
+                        // Note: We can't enumerate LSD keys to delete old inventory items
+                        // They will be overwritten when new items arrive
+                    }
+                    llLinksetDataWrite("inventory", "{}");
+                }
+            }
+            
+            // Extract and write universe_id
+            string universeField = llJsonGetValue(fieldsJson, ["universe_id"]);
+            if (universeField != JSON_INVALID && universeField != "") {
+                string universeValue = llJsonGetValue(universeField, ["stringValue"]);
+                if (universeValue != JSON_INVALID && universeValue != "") {
+                    if (llStringLength(universeValue) >= 2 && llGetSubString(universeValue, 0, 0) == "\"" && llGetSubString(universeValue, -1, -1) == "\"") {
+                        universeValue = llGetSubString(universeValue, 1, -2);
+                    }
+                    llLinksetDataWrite("universe_id", universeValue);
+                }
+            }
+            
+            debugLog("Character data written to LSD from Firestore");
+            
+            // Send notification that character data was loaded
+            llMessageLinked(LINK_SET, 0, "character loaded from firestore", "");
+            return;
+        }
         
         // Handle data update requests from other scripts
         // Also handle messages from Firestore Bridge
@@ -584,15 +987,57 @@ default {
                 debugLog("Wrote universe_id = " + universeValue);
             }
         }
-        // Handle inventory field from Firestore Bridge (v2: DEPRECATED - inventory now uses subcollection)
-        // This handler is kept for backward compatibility but no longer stores inventory in LSD
-        // Inventory is now paginated and fetched directly from Firestore subcollection
-        // The "inventory loaded" message is still sent to trigger HUD inventory refresh
+        // Handle inventory field from Firestore Bridge (atomic field get)
         else if (msg == "inventory") {
-            // v2: Inventory is no longer stored in LSD (it's paginated from subcollection)
-            // Just send "inventory loaded" message to trigger HUD to request inventoryPage
-            debugLog("Inventory field received (v2: not storing in LSD, inventory is paginated)");
-            llMessageLinked(LINK_SET, 0, "inventory loaded", "");
+            // Receive mapValue fields JSON from Firestore Bridge
+            // Format: {"banana":{"integerValue":"4"},"apple":{"integerValue":"2"}}
+            string inventoryMapValue = (string)id;
+            
+            // Get characterId from LSD (stored by Firestore Bridge)
+            string characterId = llLinksetDataRead("characterId");
+            
+            if (inventoryMapValue != "" && inventoryMapValue != JSON_INVALID && inventoryMapValue != "{}" && characterId != "" && characterId != "JSON_INVALID") {
+                list itemNames = [];  // List of item names for inventory_list key
+                integer i = 0;
+                integer itemCount = 0;
+                
+                while (TRUE) {
+                    string itemKey = llJsonGetValue(inventoryMapValue, [i]);
+                    if (itemKey == JSON_INVALID || itemKey == "") jump done_inventory_atomic;
+                    
+                    string itemField = llJsonGetValue(inventoryMapValue, [itemKey]);
+                    if (itemField != JSON_INVALID && itemField != "") {
+                        string qtyValue = llJsonGetValue(itemField, ["integerValue"]);
+                        if (qtyValue != JSON_INVALID && qtyValue != "") {
+                            // Remove quotes if present
+                            if (llStringLength(qtyValue) >= 2 && llGetSubString(qtyValue, 0, 0) == "\"" && llGetSubString(qtyValue, -1, -1) == "\"") {
+                                qtyValue = llGetSubString(qtyValue, 1, -2);
+                            }
+                            
+                            // Write individual LSD key: <characterId>_inventory_<itemName> = quantity
+                            string inventoryKey = characterId + "_inventory_" + itemKey;
+                            llLinksetDataWrite(inventoryKey, qtyValue);
+                            itemNames += [itemKey];  // Add to list for inventory_list
+                            debugLog("Wrote " + inventoryKey + " = " + qtyValue + " (from atomic field get)");
+                            itemCount++;
+                        }
+                    }
+                    i++;
+                }
+                @done_inventory_atomic;
+                
+                // Write inventory list key for easy enumeration
+                if (llGetListLength(itemNames) > 0) {
+                    string inventoryListKey = characterId + "_inventory_list";
+                    string inventoryList = llDumpList2String(itemNames, ",");
+                    llLinksetDataWrite(inventoryListKey, inventoryList);
+                    debugLog("Wrote " + inventoryListKey + " = " + inventoryList);
+                }
+                
+                debugLog("Processed " + (string)itemCount + " inventory items from atomic field get");
+            } else if (characterId == "" || characterId == "JSON_INVALID") {
+                debugLog("WARNING: Cannot write inventory - characterId not found in LSD");
+            }
         }
         else if (msg == "force sync") {
             syncToFirestore();
